Add SecurityConfig class to manage CORS mappings
A new SecurityConfig class has been added in this commit. This class, which implements Spring's WebMvcConfigurer, is responsible for defining Cross-Origin Resource Sharing (CORS) mappings for the application. This allows us to control which HTTP methods are allowed for cross-domain requests.